@@ -1,6 +1,6 @@
 package net.fishyhard.musithy.procedures;
 
-import net.minecraftforge.items.ItemHandlerHelper;
+import net.neoforged.neoforge.items.ItemHandlerHelper;
 
 import net.minecraft.world.phys.Vec3;
 import net.minecraft.world.phys.AABB;
@@ -9,10 +9,10 @@ import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.entity.TamableAnimal;
 import net.minecraft.world.entity.MobSpawnType;
-import net.minecraft.world.entity.Mob;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.server.level.ServerLevel;
+import net.minecraft.core.BlockPos;
 import net.minecraft.commands.CommandSourceStack;
 import net.minecraft.commands.CommandSource;
 
@@ -20,7 +20,6 @@ import net.fishyhard.musithy.init.MusithyModItems;
 import net.fishyhard.musithy.init.MusithyModEntities;
 import net.fishyhard.musithy.entity.RetroBoomboxPlayEntity;
 
-import java.util.stream.Collectors;
 import java.util.List;
 import java.util.Comparator;
 
@@ -37,10 +36,10 @@ public class RetroBoomboxRightClickedOnEntityProcedure {
 					&& !((sourceentity instanceof LivingEntity _livEnt ? _livEnt.getMainHandItem() : ItemStack.EMPTY).getItem() == MusithyModItems.CASSETTE_TAPE_MEET_THE_CONDUCTOR.get())
 					&& !((sourceentity instanceof LivingEntity _livEnt ? _livEnt.getMainHandItem() : ItemStack.EMPTY).getItem() == MusithyModItems.CASSETTE_TAPE_SUNDIAL_3.get())
 					&& !((sourceentity instanceof LivingEntity _livEnt ? _livEnt.getMainHandItem() : ItemStack.EMPTY).getItem() == MusithyModItems.CASSETTE_TAPE_SUNDIAL_4.get())) {
-				if (!entity.level.isClientSide())
+				if (!entity.level().isClientSide())
 					entity.discard();
 				if (sourceentity instanceof Player _player) {
-					ItemStack _setstack = new ItemStack(MusithyModItems.RETRO_BOOMBOX_ITEM.get());
+					ItemStack _setstack = new ItemStack(MusithyModItems.RETRO_BOOMBOX_ITEM.get()).copy();
 					_setstack.setCount(1);
 					ItemHandlerHelper.giveItemToPlayer(_player, _setstack);
 				}
@@ -52,29 +51,28 @@ public class RetroBoomboxRightClickedOnEntityProcedure {
 				}
 				{
 					final Vec3 _center = new Vec3(x, y, z);
-					List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(25 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center)))
-							.collect(Collectors.toList());
+					List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(25 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center))).toList();
 					for (Entity entityiterator : _entfound) {
 						if (entityiterator instanceof Player) {
 							{
 								Entity _ent = entityiterator;
-								if (!_ent.level.isClientSide() && _ent.getServer() != null) {
-									_ent.getServer().getCommands().performPrefixedCommand(new CommandSourceStack(CommandSource.NULL, _ent.position(), _ent.getRotationVector(), _ent.level instanceof ServerLevel ? (ServerLevel) _ent.level : null, 4,
-											_ent.getName().getString(), _ent.getDisplayName(), _ent.level.getServer(), _ent), "/playsound musithy:g record @a ~ ~ ~ 1 1 0");
+								if (!_ent.level().isClientSide() && _ent.getServer() != null) {
+									_ent.getServer().getCommands().performPrefixedCommand(new CommandSourceStack(CommandSource.NULL, _ent.position(), _ent.getRotationVector(), _ent.level() instanceof ServerLevel ? (ServerLevel) _ent.level() : null,
+											4, _ent.getName().getString(), _ent.getDisplayName(), _ent.level().getServer(), _ent), "/playsound musithy:g record @a ~ ~ ~ 1 1 0");
 								}
 							}
 						}
 					}
 				}
 				if (world instanceof ServerLevel _level) {
-					Entity entityToSpawn = new RetroBoomboxPlayEntity(MusithyModEntities.RETRO_BOOMBOX_PLAY.get(), _level);
-					entityToSpawn.moveTo((entity.getX()), (entity.getY()), (entity.getZ()), entity.getYRot(), entity.getXRot());
-					entityToSpawn.setYBodyRot(entity.getYRot());
-					entityToSpawn.setYHeadRot(entity.getYRot());
-					entityToSpawn.setDeltaMovement(0, 0, 0);
-					if (entityToSpawn instanceof Mob _mobToSpawn)
-						_mobToSpawn.finalizeSpawn(_level, _level.getCurrentDifficultyAt(entityToSpawn.blockPosition()), MobSpawnType.MOB_SUMMONED, null, null);
-					_level.addFreshEntity(entityToSpawn);
+					Entity entityToSpawn = MusithyModEntities.RETRO_BOOMBOX_PLAY.get().spawn(_level, BlockPos.containing(entity.getX(), entity.getY(), entity.getZ()), MobSpawnType.MOB_SUMMONED);
+					if (entityToSpawn != null) {
+						entityToSpawn.setYRot(entity.getYRot());
+						entityToSpawn.setYBodyRot(entity.getYRot());
+						entityToSpawn.setYHeadRot(entity.getYRot());
+						entityToSpawn.setXRot(entity.getXRot());
+						entityToSpawn.setDeltaMovement(0, 0, 0);
+					}
 				}
 				retroboombox = (Entity) world.getEntitiesOfClass(RetroBoomboxPlayEntity.class, AABB.ofSize(new Vec3(x, y, z), 3, 3, 3), e -> true).stream().sorted(new Object() {
 					Comparator<Entity> compareDistOf(double _x, double _y, double _z) {
@@ -85,7 +83,7 @@ public class RetroBoomboxRightClickedOnEntityProcedure {
 					if (retroboombox instanceof TamableAnimal _toTame && sourceentity instanceof Player _owner)
 						_toTame.tame(_owner);
 				}
-				if (!entity.level.isClientSide())
+				if (!entity.level().isClientSide())
 					entity.discard();
 				if (retroboombox instanceof TamableAnimal _tamIsTamedBy && sourceentity instanceof LivingEntity _livEnt ? _tamIsTamedBy.isOwnedBy(_livEnt) : false) {
 					retroboombox.getPersistentData().putString("Music", "G");
@@ -98,29 +96,28 @@ public class RetroBoomboxRightClickedOnEntityProcedure {
 				}
 				{
 					final Vec3 _center = new Vec3(x, y, z);
-					List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(25 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center)))
-							.collect(Collectors.toList());
+					List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(25 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center))).toList();
 					for (Entity entityiterator : _entfound) {
 						if (entityiterator instanceof Player) {
 							{
 								Entity _ent = entityiterator;
-								if (!_ent.level.isClientSide() && _ent.getServer() != null) {
-									_ent.getServer().getCommands().performPrefixedCommand(new CommandSourceStack(CommandSource.NULL, _ent.position(), _ent.getRotationVector(), _ent.level instanceof ServerLevel ? (ServerLevel) _ent.level : null, 4,
-											_ent.getName().getString(), _ent.getDisplayName(), _ent.level.getServer(), _ent), "/playsound musithy:enter_the_portal record @a ~ ~ ~ 1 1 0");
+								if (!_ent.level().isClientSide() && _ent.getServer() != null) {
+									_ent.getServer().getCommands().performPrefixedCommand(new CommandSourceStack(CommandSource.NULL, _ent.position(), _ent.getRotationVector(), _ent.level() instanceof ServerLevel ? (ServerLevel) _ent.level() : null,
+											4, _ent.getName().getString(), _ent.getDisplayName(), _ent.level().getServer(), _ent), "/playsound musithy:enter_the_portal record @a ~ ~ ~ 1 1 0");
 								}
 							}
 						}
 					}
 				}
 				if (world instanceof ServerLevel _level) {
-					Entity entityToSpawn = new RetroBoomboxPlayEntity(MusithyModEntities.RETRO_BOOMBOX_PLAY.get(), _level);
-					entityToSpawn.moveTo((entity.getX()), (entity.getY()), (entity.getZ()), entity.getYRot(), entity.getXRot());
-					entityToSpawn.setYBodyRot(entity.getYRot());
-					entityToSpawn.setYHeadRot(entity.getYRot());
-					entityToSpawn.setDeltaMovement(0, 0, 0);
-					if (entityToSpawn instanceof Mob _mobToSpawn)
-						_mobToSpawn.finalizeSpawn(_level, _level.getCurrentDifficultyAt(entityToSpawn.blockPosition()), MobSpawnType.MOB_SUMMONED, null, null);
-					_level.addFreshEntity(entityToSpawn);
+					Entity entityToSpawn = MusithyModEntities.RETRO_BOOMBOX_PLAY.get().spawn(_level, BlockPos.containing(entity.getX(), entity.getY(), entity.getZ()), MobSpawnType.MOB_SUMMONED);
+					if (entityToSpawn != null) {
+						entityToSpawn.setYRot(entity.getYRot());
+						entityToSpawn.setYBodyRot(entity.getYRot());
+						entityToSpawn.setYHeadRot(entity.getYRot());
+						entityToSpawn.setXRot(entity.getXRot());
+						entityToSpawn.setDeltaMovement(0, 0, 0);
+					}
 				}
 				retroboombox = (Entity) world.getEntitiesOfClass(RetroBoomboxPlayEntity.class, AABB.ofSize(new Vec3(x, y, z), 3, 3, 3), e -> true).stream().sorted(new Object() {
 					Comparator<Entity> compareDistOf(double _x, double _y, double _z) {
@@ -131,7 +128,7 @@ public class RetroBoomboxRightClickedOnEntityProcedure {
 					if (retroboombox instanceof TamableAnimal _toTame && sourceentity instanceof Player _owner)
 						_toTame.tame(_owner);
 				}
-				if (!entity.level.isClientSide())
+				if (!entity.level().isClientSide())
 					entity.discard();
 				if (retroboombox instanceof TamableAnimal _tamIsTamedBy && sourceentity instanceof LivingEntity _livEnt ? _tamIsTamedBy.isOwnedBy(_livEnt) : false) {
 					retroboombox.getPersistentData().putString("Music", "EnterThePortal");
@@ -144,29 +141,28 @@ public class RetroBoomboxRightClickedOnEntityProcedure {
 				}
 				{
 					final Vec3 _center = new Vec3(x, y, z);
-					List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(25 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center)))
-							.collect(Collectors.toList());
+					List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(25 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center))).toList();
 					for (Entity entityiterator : _entfound) {
 						if (entityiterator instanceof Player) {
 							{
 								Entity _ent = entityiterator;
-								if (!_ent.level.isClientSide() && _ent.getServer() != null) {
-									_ent.getServer().getCommands().performPrefixedCommand(new CommandSourceStack(CommandSource.NULL, _ent.position(), _ent.getRotationVector(), _ent.level instanceof ServerLevel ? (ServerLevel) _ent.level : null, 4,
-											_ent.getName().getString(), _ent.getDisplayName(), _ent.level.getServer(), _ent), "/playsound musithy:determine_your_fate record @a ~ ~ ~ 1 1 0");
+								if (!_ent.level().isClientSide() && _ent.getServer() != null) {
+									_ent.getServer().getCommands().performPrefixedCommand(new CommandSourceStack(CommandSource.NULL, _ent.position(), _ent.getRotationVector(), _ent.level() instanceof ServerLevel ? (ServerLevel) _ent.level() : null,
+											4, _ent.getName().getString(), _ent.getDisplayName(), _ent.level().getServer(), _ent), "/playsound musithy:determine_your_fate record @a ~ ~ ~ 1 1 0");
 								}
 							}
 						}
 					}
 				}
 				if (world instanceof ServerLevel _level) {
-					Entity entityToSpawn = new RetroBoomboxPlayEntity(MusithyModEntities.RETRO_BOOMBOX_PLAY.get(), _level);
-					entityToSpawn.moveTo((entity.getX()), (entity.getY()), (entity.getZ()), entity.getYRot(), entity.getXRot());
-					entityToSpawn.setYBodyRot(entity.getYRot());
-					entityToSpawn.setYHeadRot(entity.getYRot());
-					entityToSpawn.setDeltaMovement(0, 0, 0);
-					if (entityToSpawn instanceof Mob _mobToSpawn)
-						_mobToSpawn.finalizeSpawn(_level, _level.getCurrentDifficultyAt(entityToSpawn.blockPosition()), MobSpawnType.MOB_SUMMONED, null, null);
-					_level.addFreshEntity(entityToSpawn);
+					Entity entityToSpawn = MusithyModEntities.RETRO_BOOMBOX_PLAY.get().spawn(_level, BlockPos.containing(entity.getX(), entity.getY(), entity.getZ()), MobSpawnType.MOB_SUMMONED);
+					if (entityToSpawn != null) {
+						entityToSpawn.setYRot(entity.getYRot());
+						entityToSpawn.setYBodyRot(entity.getYRot());
+						entityToSpawn.setYHeadRot(entity.getYRot());
+						entityToSpawn.setXRot(entity.getXRot());
+						entityToSpawn.setDeltaMovement(0, 0, 0);
+					}
 				}
 				retroboombox = (Entity) world.getEntitiesOfClass(RetroBoomboxPlayEntity.class, AABB.ofSize(new Vec3(x, y, z), 3, 3, 3), e -> true).stream().sorted(new Object() {
 					Comparator<Entity> compareDistOf(double _x, double _y, double _z) {
@@ -177,7 +173,7 @@ public class RetroBoomboxRightClickedOnEntityProcedure {
 					if (retroboombox instanceof TamableAnimal _toTame && sourceentity instanceof Player _owner)
 						_toTame.tame(_owner);
 				}
-				if (!entity.level.isClientSide())
+				if (!entity.level().isClientSide())
 					entity.discard();
 				if (retroboombox instanceof TamableAnimal _tamIsTamedBy && sourceentity instanceof LivingEntity _livEnt ? _tamIsTamedBy.isOwnedBy(_livEnt) : false) {
 					retroboombox.getPersistentData().putString("Music", "DetermineYourFate");
@@ -190,29 +186,28 @@ public class RetroBoomboxRightClickedOnEntityProcedure {
 				}
 				{
 					final Vec3 _center = new Vec3(x, y, z);
-					List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(25 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center)))
-							.collect(Collectors.toList());
+					List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(25 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center))).toList();
 					for (Entity entityiterator : _entfound) {
 						if (entityiterator instanceof Player) {
 							{
 								Entity _ent = entityiterator;
-								if (!_ent.level.isClientSide() && _ent.getServer() != null) {
-									_ent.getServer().getCommands().performPrefixedCommand(new CommandSourceStack(CommandSource.NULL, _ent.position(), _ent.getRotationVector(), _ent.level instanceof ServerLevel ? (ServerLevel) _ent.level : null, 4,
-											_ent.getName().getString(), _ent.getDisplayName(), _ent.level.getServer(), _ent), "/playsound musithy:meet_the_conductor record @a ~ ~ ~ 1 1 0");
+								if (!_ent.level().isClientSide() && _ent.getServer() != null) {
+									_ent.getServer().getCommands().performPrefixedCommand(new CommandSourceStack(CommandSource.NULL, _ent.position(), _ent.getRotationVector(), _ent.level() instanceof ServerLevel ? (ServerLevel) _ent.level() : null,
+											4, _ent.getName().getString(), _ent.getDisplayName(), _ent.level().getServer(), _ent), "/playsound musithy:meet_the_conductor record @a ~ ~ ~ 1 1 0");
 								}
 							}
 						}
 					}
 				}
 				if (world instanceof ServerLevel _level) {
-					Entity entityToSpawn = new RetroBoomboxPlayEntity(MusithyModEntities.RETRO_BOOMBOX_PLAY.get(), _level);
-					entityToSpawn.moveTo((entity.getX()), (entity.getY()), (entity.getZ()), entity.getYRot(), entity.getXRot());
-					entityToSpawn.setYBodyRot(entity.getYRot());
-					entityToSpawn.setYHeadRot(entity.getYRot());
-					entityToSpawn.setDeltaMovement(0, 0, 0);
-					if (entityToSpawn instanceof Mob _mobToSpawn)
-						_mobToSpawn.finalizeSpawn(_level, _level.getCurrentDifficultyAt(entityToSpawn.blockPosition()), MobSpawnType.MOB_SUMMONED, null, null);
-					_level.addFreshEntity(entityToSpawn);
+					Entity entityToSpawn = MusithyModEntities.RETRO_BOOMBOX_PLAY.get().spawn(_level, BlockPos.containing(entity.getX(), entity.getY(), entity.getZ()), MobSpawnType.MOB_SUMMONED);
+					if (entityToSpawn != null) {
+						entityToSpawn.setYRot(entity.getYRot());
+						entityToSpawn.setYBodyRot(entity.getYRot());
+						entityToSpawn.setYHeadRot(entity.getYRot());
+						entityToSpawn.setXRot(entity.getXRot());
+						entityToSpawn.setDeltaMovement(0, 0, 0);
+					}
 				}
 				retroboombox = (Entity) world.getEntitiesOfClass(RetroBoomboxPlayEntity.class, AABB.ofSize(new Vec3(x, y, z), 3, 3, 3), e -> true).stream().sorted(new Object() {
 					Comparator<Entity> compareDistOf(double _x, double _y, double _z) {
@@ -223,7 +218,7 @@ public class RetroBoomboxRightClickedOnEntityProcedure {
 					if (retroboombox instanceof TamableAnimal _toTame && sourceentity instanceof Player _owner)
 						_toTame.tame(_owner);
 				}
-				if (!entity.level.isClientSide())
+				if (!entity.level().isClientSide())
 					entity.discard();
 				if (retroboombox instanceof TamableAnimal _tamIsTamedBy && sourceentity instanceof LivingEntity _livEnt ? _tamIsTamedBy.isOwnedBy(_livEnt) : false) {
 					retroboombox.getPersistentData().putString("Music", "MeetTheConductor");
@@ -236,29 +231,28 @@ public class RetroBoomboxRightClickedOnEntityProcedure {
 				}
 				{
 					final Vec3 _center = new Vec3(x, y, z);
-					List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(25 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center)))
-							.collect(Collectors.toList());
+					List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(25 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center))).toList();
 					for (Entity entityiterator : _entfound) {
 						if (entityiterator instanceof Player) {
 							{
 								Entity _ent = entityiterator;
-								if (!_ent.level.isClientSide() && _ent.getServer() != null) {
-									_ent.getServer().getCommands().performPrefixedCommand(new CommandSourceStack(CommandSource.NULL, _ent.position(), _ent.getRotationVector(), _ent.level instanceof ServerLevel ? (ServerLevel) _ent.level : null, 4,
-											_ent.getName().getString(), _ent.getDisplayName(), _ent.level.getServer(), _ent), "/playsound musithy:sundial_3 record @a ~ ~ ~ 1 1 0");
+								if (!_ent.level().isClientSide() && _ent.getServer() != null) {
+									_ent.getServer().getCommands().performPrefixedCommand(new CommandSourceStack(CommandSource.NULL, _ent.position(), _ent.getRotationVector(), _ent.level() instanceof ServerLevel ? (ServerLevel) _ent.level() : null,
+											4, _ent.getName().getString(), _ent.getDisplayName(), _ent.level().getServer(), _ent), "/playsound musithy:sundial_3 record @a ~ ~ ~ 1 1 0");
 								}
 							}
 						}
 					}
 				}
 				if (world instanceof ServerLevel _level) {
-					Entity entityToSpawn = new RetroBoomboxPlayEntity(MusithyModEntities.RETRO_BOOMBOX_PLAY.get(), _level);
-					entityToSpawn.moveTo((entity.getX()), (entity.getY()), (entity.getZ()), entity.getYRot(), entity.getXRot());
-					entityToSpawn.setYBodyRot(entity.getYRot());
-					entityToSpawn.setYHeadRot(entity.getYRot());
-					entityToSpawn.setDeltaMovement(0, 0, 0);
-					if (entityToSpawn instanceof Mob _mobToSpawn)
-						_mobToSpawn.finalizeSpawn(_level, _level.getCurrentDifficultyAt(entityToSpawn.blockPosition()), MobSpawnType.MOB_SUMMONED, null, null);
-					_level.addFreshEntity(entityToSpawn);
+					Entity entityToSpawn = MusithyModEntities.RETRO_BOOMBOX_PLAY.get().spawn(_level, BlockPos.containing(entity.getX(), entity.getY(), entity.getZ()), MobSpawnType.MOB_SUMMONED);
+					if (entityToSpawn != null) {
+						entityToSpawn.setYRot(entity.getYRot());
+						entityToSpawn.setYBodyRot(entity.getYRot());
+						entityToSpawn.setYHeadRot(entity.getYRot());
+						entityToSpawn.setXRot(entity.getXRot());
+						entityToSpawn.setDeltaMovement(0, 0, 0);
+					}
 				}
 				retroboombox = (Entity) world.getEntitiesOfClass(RetroBoomboxPlayEntity.class, AABB.ofSize(new Vec3(x, y, z), 3, 3, 3), e -> true).stream().sorted(new Object() {
 					Comparator<Entity> compareDistOf(double _x, double _y, double _z) {
@@ -269,7 +263,7 @@ public class RetroBoomboxRightClickedOnEntityProcedure {
 					if (retroboombox instanceof TamableAnimal _toTame && sourceentity instanceof Player _owner)
 						_toTame.tame(_owner);
 				}
-				if (!entity.level.isClientSide())
+				if (!entity.level().isClientSide())
 					entity.discard();
 				if (retroboombox instanceof TamableAnimal _tamIsTamedBy && sourceentity instanceof LivingEntity _livEnt ? _tamIsTamedBy.isOwnedBy(_livEnt) : false) {
 					retroboombox.getPersistentData().putString("Music", "Sundial3");
@@ -282,29 +276,28 @@ public class RetroBoomboxRightClickedOnEntityProcedure {
 				}
 				{
 					final Vec3 _center = new Vec3(x, y, z);
-					List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(25 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center)))
-							.collect(Collectors.toList());
+					List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(25 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center))).toList();
 					for (Entity entityiterator : _entfound) {
 						if (entityiterator instanceof Player) {
 							{
 								Entity _ent = entityiterator;
-								if (!_ent.level.isClientSide() && _ent.getServer() != null) {
-									_ent.getServer().getCommands().performPrefixedCommand(new CommandSourceStack(CommandSource.NULL, _ent.position(), _ent.getRotationVector(), _ent.level instanceof ServerLevel ? (ServerLevel) _ent.level : null, 4,
-											_ent.getName().getString(), _ent.getDisplayName(), _ent.level.getServer(), _ent), "/playsound musithy:sundial_4 record @a ~ ~ ~ 1 1 0");
+								if (!_ent.level().isClientSide() && _ent.getServer() != null) {
+									_ent.getServer().getCommands().performPrefixedCommand(new CommandSourceStack(CommandSource.NULL, _ent.position(), _ent.getRotationVector(), _ent.level() instanceof ServerLevel ? (ServerLevel) _ent.level() : null,
+											4, _ent.getName().getString(), _ent.getDisplayName(), _ent.level().getServer(), _ent), "/playsound musithy:sundial_4 record @a ~ ~ ~ 1 1 0");
 								}
 							}
 						}
 					}
 				}
 				if (world instanceof ServerLevel _level) {
-					Entity entityToSpawn = new RetroBoomboxPlayEntity(MusithyModEntities.RETRO_BOOMBOX_PLAY.get(), _level);
-					entityToSpawn.moveTo((entity.getX()), (entity.getY()), (entity.getZ()), entity.getYRot(), entity.getXRot());
-					entityToSpawn.setYBodyRot(entity.getYRot());
-					entityToSpawn.setYHeadRot(entity.getYRot());
-					entityToSpawn.setDeltaMovement(0, 0, 0);
-					if (entityToSpawn instanceof Mob _mobToSpawn)
-						_mobToSpawn.finalizeSpawn(_level, _level.getCurrentDifficultyAt(entityToSpawn.blockPosition()), MobSpawnType.MOB_SUMMONED, null, null);
-					_level.addFreshEntity(entityToSpawn);
+					Entity entityToSpawn = MusithyModEntities.RETRO_BOOMBOX_PLAY.get().spawn(_level, BlockPos.containing(entity.getX(), entity.getY(), entity.getZ()), MobSpawnType.MOB_SUMMONED);
+					if (entityToSpawn != null) {
+						entityToSpawn.setYRot(entity.getYRot());
+						entityToSpawn.setYBodyRot(entity.getYRot());
+						entityToSpawn.setYHeadRot(entity.getYRot());
+						entityToSpawn.setXRot(entity.getXRot());
+						entityToSpawn.setDeltaMovement(0, 0, 0);
+					}
 				}
 				retroboombox = (Entity) world.getEntitiesOfClass(RetroBoomboxPlayEntity.class, AABB.ofSize(new Vec3(x, y, z), 3, 3, 3), e -> true).stream().sorted(new Object() {
 					Comparator<Entity> compareDistOf(double _x, double _y, double _z) {
@@ -315,7 +308,7 @@ public class RetroBoomboxRightClickedOnEntityProcedure {
 					if (retroboombox instanceof TamableAnimal _toTame && sourceentity instanceof Player _owner)
 						_toTame.tame(_owner);
 				}
-				if (!entity.level.isClientSide())
+				if (!entity.level().isClientSide())
 					entity.discard();
 				if (retroboombox instanceof TamableAnimal _tamIsTamedBy && sourceentity instanceof LivingEntity _livEnt ? _tamIsTamedBy.isOwnedBy(_livEnt) : false) {
 					retroboombox.getPersistentData().putString("Music", "Sundial4");
